fixing chevrons and flexwrapping

--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ nav a > img:hover {
   background-color: #0b4f6c;
 }
 
-nav > a:nth-child(2) > img {
+nav > a:nth-child(2) img {
   position: absolute;
   right: 0;
-  transform: rotate (180deg);
+  transform: rotate(180deg);
 }
 
 header {
@@ -61,7 +61,7 @@ article#search-page {
   display: none;
 }
 
-article#two-column article {
+article#two-column {
   display: flex;
   flex-direction: row;
 }
@@ -71,32 +71,32 @@ article#search-page section {
   width: 60%;
 }
 
-article#two-column article section {
+article#two-column section {
   margin-right: 9%;
 }
 
-article#two-column article section,
-article#two-column article figure {
+article#two-column section,
+article#two-column figure {
   display: inline-block;
   width: 45%;
 }
 
-article#two-column article figure {
+article#two-column figure {
   margin: 0;
 }
 
-article#two-column article figure img {
+article#two-column figure img {
   max-width: 100%;
   max-height: 100%;
 }
 
-article#two-column article figure figcaption ul {
+article#two-column figure figcaption ul {
   list-style: none;
   margin: 10px 0;
   padding: 0 20px;
 }
 
-article#two-column article figure figcaption ul li {
+article#two-column figure figcaption ul li {
   margin: 5px 0;
   padding: 10px;
 }
@@ -130,20 +130,20 @@ footer {
 }
 
 @media only screen and (max-width: 768px) {
-  article#two-column article {
+  article#two-column {
     flex-wrap: wrap;
   }
 
-  article#two-column article section {
+  article#two-column section {
     margin-right: 0;
   }
 
-  article#two-column article figure {
+  article#two-column figure {
     margin-top: 40px;
   }
 
-  article#two-column article section,
-  article#two-column article figure {
+  article#two-column section,
+  article#two-column figure {
     width: 100%;
   }
 }
